# Viet2EN_Hotkey_Translator

./: .gitignore  README.en.md  README.md  README.vi.md  THIRD_PARTY_NOTICES.md  Viet2EN.spec  Vitra.spec  build.bat  config.example.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.vbs  test_anti_copy.html  version_info.txt
.github/workflows/: ci.yml
browser_extension/: README.md  content.js  manifest.json  options.html  options.js  popup.html  popup.js  service-worker.js
core/: __init__.py  browser_bridge.py  clipboard.py  engine.py  ocr.py  uiautomation_reader.py
packaging/: desktop.ini
scripts/: copy_licenses.py  test_anti_copy_browser.py
tests/: conftest.py  test_browser_bridge.py  test_clipboard.py  test_config.py  test_engine.py  test_extension_manifest.py  test_logging_setup.py  test_ocr.py
ui/: __init__.py  ocr_selector.py  settings.py  tray.py
utils/: __init__.py  config.py  logging_setup.py
