[project]
name = "viet2en-hotkey-translator"
version = "2.0.0"
description = "Offline Vietnamese-English system-wide translator for Windows"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
dependencies = [
  "argostranslate==1.11.0",
  "keyboard==0.13.5",
  "pyperclip==1.11.0",
  "pystray==0.19.5",
  "Pillow==12.2.0",
  "websockets==16.0",
  "pywin32==312",
  "uiautomation==2.0.29",
  "rapidocr-onnxruntime==1.4.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-config --strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 110
exclude = [".venv", "build", "dist", "models"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = "(^build/|^dist/|^models/|^tests/)"
